integrate with lovelive cards
